--- a/css/reviews.css
+++ b/css/reviews.css
@@ -13,7 +13,11 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
-
+.wrapper {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
 .container {
     margin: 0 auto;
     width: 1140px;
@@ -147,6 +151,8 @@ h6 {
 
 /* -------------------- banner ------------------- */
 .banner {
+    display: flex;
+    align-items: center;
     height: 357px;
     background: url(../img/couple.png) no-repeat 804px 18px,
         url(../img/middleline.jpg) no-repeat center;
@@ -158,7 +164,6 @@ h6 {
     line-height: 1.2;
     font-weight: 700;
     color: #ffffff;
-    padding-top: 124px;
 }
 
 /* --------------------------- form ----------------------- */
@@ -227,7 +232,7 @@ textarea {
     margin-bottom: 25px;
 }
 
-.form__tags__checkbox:checked ~ .tags__bg {
+.form__tags__checkbox:checked~.tags__bg {
     background-color: #c7e9e3;
 }
 
@@ -250,7 +255,15 @@ textarea {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+}
 
+.form__tags__tags-name__item {
+    margin-right: 17px;
+    margin-bottom: 5px;
+}
+
+.checkbox {
+    outline: none;
 }
 
 .tags__checkbox__name {
@@ -260,8 +273,6 @@ textarea {
     background-color: #e6e6e6;
     padding: 10px 13px;
     border-radius: 50px;
-    margin-right: 17px;
-    margin-bottom: 5px;
     cursor: pointer;
 }
 
